--- a/app/src/main/res/layout/wallet_loanstatus_preview.xml
+++ b/app/src/main/res/layout/wallet_loanstatus_preview.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_home"
+    android:background="@color/background_gray"
     tools:context="com.myfarmnow.myfarmcrop.fragments.wallet.WalletLoanStatusPreview">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -24,32 +24,38 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="10dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
             android:id="@+id/text_view_loan_status_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="28dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            android:orientation="vertical">
+            android:layout_margin="10dp"
+            android:padding="10dp"
+            android:orientation="vertical"
+            android:background="@color/white">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="5dp"
                 android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="0.5"
-                    android:text="Date : "
-
-                    android:textSize="16sp" />
+                    android:text="Date "
+                    android:textColor="@color/textColor"
+                    android:textSize="16sp"/>
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.1"
+                    android:text=":"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="18sp"  />
 
                 <TextView
                     android:id="@+id/text_view_loan_status_preview_date"
@@ -57,7 +63,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="0.5"
                     android:text="12/07/2019"
-
+                    android:textColor="@color/colorPrimary"
                     android:textSize="18sp" />
             </LinearLayout>
 
@@ -70,11 +76,17 @@
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-
                     android:layout_weight="0.5"
-                    android:text="Loan Status : "
-
+                    android:text="Loan Status"
+                    android:textColor="@color/textColor"
                     android:textSize="16sp" />
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.1"
+                    android:text=":"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="18sp"  />
 
                 <TextView
                     android:id="@+id/text_view_loan_status_preview_status"
@@ -82,7 +94,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="0.5"
                     android:text="Approved"
-
+                    android:textColor="@color/colorPrimary"
                     android:textSize="18sp" />
             </LinearLayout>
 
@@ -95,19 +107,24 @@
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-
                     android:layout_weight="0.5"
-                    android:text="Amount : "
-
+                    android:text="Amount"
+                    android:textColor="@color/textColor"
                     android:textSize="16sp" />
-
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.1"
+                    android:text=":"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="18sp"  />
                 <TextView
                     android:id="@+id/text_view_loan_status_preview_amount"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="0.5"
                     android:text="UGX 80,000"
-
+                    android:textColor="@color/colorPrimary"
                     android:textSize="18sp" />
             </LinearLayout>
 
@@ -121,8 +138,16 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="0.5"
-                    android:text="Interest Rate : "
+                    android:text="Interest Rate"
+                    android:textColor="@color/textColor"
                     android:textSize="16sp" />
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.1"
+                    android:text=":"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="18sp"  />
 
                 <TextView
                     android:id="@+id/text_view_loan_status_preview_interest_rate"
@@ -130,7 +155,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="0.5"
                     android:text="8%"
-
+                    android:textColor="@color/colorPrimary"
                     android:textSize="18sp" />
             </LinearLayout>
 
@@ -144,17 +169,23 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="0.5"
-                    android:text="Duration :"
-
+                    android:text="Duration"
+                    android:textColor="@color/textColor"
                     android:textSize="16sp" />
-
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.1"
+                    android:text=":"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="18sp"  />
                 <TextView
                     android:id="@+id/text_view_loan_status_preview_duration"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="0.5"
                     android:text="3 Weeks"
-
+                    android:textColor="@color/colorPrimary"
                     android:textSize="18sp" />
             </LinearLayout>
 
@@ -169,17 +200,23 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="0.5"
-                    android:text="Due Date :"
-
+                    android:text="Due Date"
+                    android:textColor="@color/textColor"
                     android:textSize="16sp" />
-
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.1"
+                    android:text=":"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="18sp"  />
                 <TextView
                     android:id="@+id/text_view_loan_status_preview_due_date"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="0.5"
                     android:text="29/10/2020"
-
+                    android:textColor="@color/colorPrimary"
                     android:textSize="18sp" />
             </LinearLayout>
 
@@ -193,17 +230,23 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="0.5"
-                    android:text="Due Amount :"
-
+                    android:text="Due Amount"
+                    android:textColor="@color/textColor"
                     android:textSize="16sp" />
-
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.1"
+                    android:text=":"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="18sp"  />
                 <TextView
                     android:id="@+id/text_view_loan_status_preview_due_amount"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="0.5"
                     android:text="UGX 96400"
-
+                    android:textColor="@color/colorPrimary"
                     android:textSize="18sp" />
             </LinearLayout>
 
@@ -219,17 +262,23 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="0.5"
-                    android:text="Total Payments :"
-
+                    android:text="Total Payments"
+                    android:textColor="@color/textColor"
                     android:textSize="16sp" />
-
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.1"
+                    android:text=":"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="18sp"  />
                 <TextView
                     android:id="@+id/text_view_loan_status_preview_payments"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="0.5"
                     android:text="UGX 46,400"
-
+                    android:textColor="@color/colorPrimary"
                     android:textSize="18sp" />
             </LinearLayout>
 
@@ -245,17 +294,23 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="0.5"
-                    android:text="Fines :"
-
+                    android:text="Fines"
+                    android:textColor="@color/textColor"
                     android:textSize="16sp" />
-
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.1"
+                    android:text=":"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="18sp"  />
                 <TextView
                     android:id="@+id/text_view_loan_status_preview_fines"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="0.5"
                     android:text="UGX 0"
-
+                    android:textColor="@color/colorPrimary"
                     android:textSize="18sp" />
             </LinearLayout>
 
@@ -263,7 +318,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:visibility="gone">
 
                 <TextView
                     android:layout_width="0dp"
@@ -292,24 +348,79 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:orientation="horizontal">
+             <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="National ID Front :"
+                    android:textColor="@color/textColor"
+                    android:textSize="16sp"/>
                 <ImageView
                     android:id="@+id/image_view_loan_status_preview_nid_front"
-                    android:layout_width="130dp"
-                    android:layout_height="100dp"
+                    android:layout_width="180dp"
+                    android:layout_height="120dp"
                     android:src="@drawable/add_default_image" />
+             </LinearLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="National ID Back :"
+                    android:textColor="@color/textColor"
+                    android:textSize="16sp"/>
                 <ImageView
                     android:id="@+id/image_view_loan_status_preview_nid_back"
-                    android:layout_width="130dp"
-                    android:layout_height="100dp"
+                    android:layout_width="180dp"
+                    android:layout_height="120dp"
                     android:src="@drawable/add_default_image" />
+                </LinearLayout>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:orientation="horizontal">
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Photo Holding ID :"
+                    android:textColor="@color/textColor"
+                    android:textSize="16sp"/>
                 <ImageView
                     android:id="@+id/image_view_loan_status_preview_user_photo"
-                    android:layout_width="130dp"
-                    android:layout_height="100dp"
+                    android:layout_width="180dp"
+                    android:layout_height="120dp"
                     android:src="@drawable/add_default_image" />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Farm Photo :"
+                    android:textColor="@color/textColor"
+                    android:textSize="16sp"/>
+                <ImageView
+                    android:layout_width="180dp"
+                    android:layout_height="120dp"
+                    android:src="@drawable/add_default_image" />
+                </LinearLayout>
             </LinearLayout>
 
         </LinearLayout>
